Assert in MoveSelectionCommand::doApply https://bugs.webkit.org/show_bug.cgi?id=70277

Patch by Devdatta Deshpande <pwjd73@motorola.com> on 2011-11-02
Reviewed by Ryosuke Niwa.

Source/WebCore:

A MoveSelectionCommand should be fired only if the selection type is
RangeSelection, since nothing is selected in other cases.

Test: fast/events/drag-link.html

* page/DragController.cpp:
(WebCore::DragController::dragIsMove):

LayoutTests:

Test to drag-drop anchor element on an already focused editable div
element.

* fast/events/drag-link-expected.txt: Added.
* fast/events/drag-link.html: Added.

Canonical link: https://commits.webkit.org/87677@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99085 268f45cc-cd09-0410-ab3c-d52691b4dbfc